# pure3270

./: .bandit  .coveragerc  .env.example  .flake8  .gitignore  .gitmessage-formatting  .merge_resolved  .mypy_full.txt  .pre-commit-config.yaml  .pylintrc  AGENTS.md  API_COMPATIBILITY_AUDIT.md  BUG_PREVENTION_IMPLEMENTATION_ROADMAP.md  BUG_PREVENTION_STRATEGY.md  CI_CD.md  CI_FINAL_STATUS_REPORT.md  CI_PERFORMANCE_OPTIMIZATION_REPORT.md  CI_README.md  CI_REMAINING_ISSUES_ASSESSMENT.md  CI_TESTING_WARNINGS_ANALYSIS_REPORT.md  CI_VERIFICATION_FINAL_REPORT.md  COMPLETE_TEST_FIXES_SUMMARY.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONNECTION_FIX_SUMMARY.md  CONTRIBUTING.md  COPILOT_PYTHON_INTEGRATION.md  COPILOT_WORKFLOW_TESTING.md  COVERAGE_GAPS_ANALYSIS.md  CRUSH.md  DEVCONTAINER_SETUP_SUMMARY.md  DOCKER_TESTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_NOV_2025.md  DOCUMENTATION_VALIDATION_REPORT.md  Dockerfile.hercules-configured  Dockerfile.mock-tn3270  Dockerfile.s3270  ENHANCED_PYTHON_VERSION_MATRIX_TESTING_SPEC.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_TROUBLESHOOTING_COMPLETE.md  (+135 more)
.agent/: events.jsonl  scratchpad.md  summary.md
.devcontainer/: Dockerfile  devcontainer.json  setup-python-versions.sh
.github/: copilot-instructions.md
.sisyphus/: ralph-loop.local.md
dashboard/: index.html
docs/: PROJECT_VALIDATION_REPORT.md  README.md  conf.py  index.md  python_version_automation.md  regression-trace-audit.md  requirements.txt
examples/: TRACE_COMPARISON_README.md  automated_trace_test_suite.py  compare_output.py  compare_screen_output.py  compare_trace_processing.py  demo_usability.py  differential_fuzz.py  differential_fuzz_compare.py  example_advanced_screen_operations.py  example_binary_data_handling.py  example_connection_management.py  example_end_to_end.py  example_error_handling.py  example_patching.py  example_performance_optimization.py  example_printer_session.py  example_protocol_operations.py  example_pub400.py  example_pub400_p3270.py  example_pub400_p3270_native.py  example_pub400_s3270.py  example_pub400_ultra_fast.py  example_standalone.py  example_terminal_models.py  example_trace.py  full_trace_testing.py  generate_feature_traces.py  network_simulator.py  regression_testing_example.py  run_all_trace_tests.py  run_diff_compare.py  run_differential_fuzz.py  trace_analyzer.py  trace_comparison.py  warning_categorization_demo.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2a3668604fb8c52d___init___py.html  z_2a3668604fb8c52d_ebcdic_py.html  z_2a3668604fb8c52d_screen_buffer_py.html  z_61a464755c58f78f___init___py.html  z_61a464755c58f78f_session_py.html  z_cc1d633135843355___init___py.html  z_cc1d633135843355_patching_py.html  z_fe285a7a98d08891___init___py.html  z_fe285a7a98d08891_data_stream_py.html  z_fe285a7a98d08891_exceptions_py.html  z_fe285a7a98d08891_negotiator_py.html  z_fe285a7a98d08891_printer_py.html  z_fe285a7a98d08891_ssl_wrapper_py.html  z_fe285a7a98d08891_tn3270_handler_py.html  z_fe285a7a98d08891_tn3270e_header_py.html  z_fe285a7a98d08891_utils_py.html
logs/: mypy_after_exclude.txt  mypy_core.txt  mypy_initial.txt  pylint_initial.txt
memory-bank/: activeContext-2025-09-13.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  trace_negotiation_test_coverage.md
mock_server/: README.md  __init__.py  screen_builders.py  tls_certs.py  tn3270_mock_server.py  x3270_target.py
pure3270/: __init__.py  __main__.py  constants.py  exceptions.py  ind_file.py  lu_lu_session.py  p3270_client.py  session.py  session.py.backup  session_manager.py
scripts/: ai_analyzer.py  analyze_test_failures.py  auto_format_commit.py  check_python_releases.py  diagnose_marker.py  diagnose_marker_grouped.py  failure_parser.py  payload_comment.json  payload_comment_no_regression.json  payload_issue.json  payload_issue_regression_only.json  pre_commit_with_autofix.py  replay_and_dump.py  replay_marker_only.py  run_batch_compare.py  simulate_copilot_label_check.js  simulate_copilot_label_check.py
test_output/: batch_trace_comparison_results.json  batch_trace_results.json  ci_selected_traces_results.xml  comprehensive_negotiation_coverage.json  diff_fuzz_issues.json  fuzz_test_results.txt  negotiation_coverage_report.json  printer_coverage_report.json  pytest_results.xml  test_suite_results_20251025_025736.json  test_suite_results_20251025_025817.json  test_suite_results_20251025_025840.json
tests/: comprehensive_api_parity_results.json  conftest.py  test_3270_data_payload.py  test_3270_extended_payload.py  test_aid_support.py  test_api_exports.py  test_ascii_mode_detection.py  test_attribution_validation.py  test_behavior_verification.py  test_bind_image_parsing.py  test_bind_unbind_lifecycle.py  test_c3270_compatibility.py  test_cli.py  test_component_initialization.py  test_comprehensive_trace_testing.py  test_data_stream.py  test_dbcs_support.py  test_dbcs_traces.py  test_drop_in_replacement_test.py  test_ebcdic_compat.py  test_ebcdic_import_roundtrip.py  test_ebcdic_screenbuffer_compat.py  test_ebcdic_translation_archive.py  test_emulation.py  test_emulation_ebcdic.py  test_enhanced_mock_server.py  test_error_handling.py  test_error_handling_coverage.py  test_error_handling_traces.py  test_extended_field_attributes.py  test_feature_matrix.py  test_field_modification.py  test_hercules_screen.py  test_ind_file_coverage.py  test_ind_file_transfers.py  test_insert_text_async.py  test_integration.py  test_integration_scenarios.py  test_integration_validation.py  test_integration_workflows.py  (+86 more)
tools/: ATTRIBUTION_GUIDE.md  ENHANCED_TEST_SERVER_INFRASTRUCTURE.md<  api_compatibility_report.py  attribution_templates.py  auth_testing_suite.py  batch_compare_traces.py  char_diff.py  code_analyzer.py  compare_replay_with_s3270.py  diff_parity_reports.py  docker_tn3270_server.py  dry_violation_detector.py  enhanced_trace_replay.py  forbid_macros.py  generate_attribution.py  generate_expected_outputs.py  generate_trace_baselines.py  memory_limit.py  mock_tn3270_server.py  (+22 more)
(+511 files in other folders)
