[build-system]
requires = ["setuptools >= 45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pure3270"
version = "0.3.1"
description = "Pure Python 3270 emulator"
readme = "README.md"
authors = [{name = "Pure3270 Developers"}]
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    # Dropped Python 3.9 support
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]

 [project.optional-dependencies]
 test = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
    "pytest-benchmark >= 4.0",
    "pytest-xdist >= 3.0.0",  # For parallel test execution
    "pytest-sugar >= 1.0.0",  # Better test output
    "pytest-html >= 4.1.0",   # HTML test reports
    "flake8 >= 7.0",
    "black >= 24.0",
    "isort >= 5.13",
    "pytest-cov >= 5.0",
    "p3270 >= 0.1.6",
    "pytest-timeout >= 2.1",
    "hypothesis",
    "mypy >= 1.0.0",
    "pylint >= 2.15.0",
    "bandit >= 1.7.0",
    "pre-commit >= 3.0.0",
    "psutil>=5.9",
 ]
testing = [
    "python-dotenv >= 1.0.0",
]
docs = [
    "sphinx >= 4.0",
    "sphinx-rtd-theme >= 1.0",
]
 dev = [
      "pytest>=7.0",
      "mypy>=1.0",
      "flake8>=6.0",
      "pytest-cov>=5.0",
      "pylint>=3.0",
      "bandit>=1.7",
      "pre-commit>=3.0",
      "black>=23.0",
      "rich>=13.7.0",          # Beautiful terminal output
      "debugpy>=1.8.0",        # DAP debugger
      "py-spy>=0.3.0",         # Performance profiling
      "radon>=6.0.0",          # Cyclomatic complexity
      "cohesion>=1.0.0",       # Code cohesion analysis
      "graphviz>=0.20.0",      # State machine visualization
  ]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services (deselect with '-m \"not integration\"')",
    "property: property-based tests",
]
norecursedirs = ["archive", "build", "dist", ".git", ".tox", ".pytest_cache", "mcp-servers"]
testpaths = ["tests", "examples", "quick_test.py", "test_*.py", "mcp-servers"]
 timeout = 30
 timeout_method = "thread"

 [tool.setuptools.packages.find]
include = ["pure3270"]
exclude = ["test_baselines", "test_baselines.*", "tests*", "examples", "scripts", "tools", "docs", "archive"]

[tool.coverage.run]
 source = ["pure3270"]
 omit = [
     "*/tests/*",
     "*/test_*",
     "*/conftest.py",
     "*/__init__.py",
 ]

 [tool.coverage.report]
 exclude_lines = [
     "pragma: no cover",
     "def __repr__",
     "if self.debug:",
     "if settings.DEBUG",
     "raise AssertionError",
     "raise NotImplementedError",
     "if 0:",
     "if __name__ == .__main__.:",
 ]
 fail_under = 0

 [tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["archive/*", "build/*", "dist/*"]
